# os-utils

./: .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
config/: apple.cmake
src/: demo.ts  demo.tsx  index.ts
src/cpp/: main.cpp
src/cpp/AboutPanel/: about_panel.cpp  about_panel.h  about_panel.mm  about_panel_wrap.cpp  about_panel_wrap.h
src/cpp/Dock/: dock.cpp  dock.h  dock.hpp  dock.mm  dock_wrap.cpp  dock_wrap.h
src/cpp/Info/: info.cpp  info.h  info.mm  info_wrap.cpp  info_wrap.h
src/lib/: aboutPanel.ts  dock.ts  info.ts
src/lib/utils/: addon.ts
